fixed multiple click and wrong color

--- a/scss/blocks/_play.scss
+++ b/scss/blocks/_play.scss
@@ -160,7 +160,7 @@
             color: $playFont;
             cursor: pointer;
             --animate-duration: 0.5s;
-
+            background-color: transparent;
             &:hover {
                 background-color: $button;
                 color: $text;
