--- a/scss/blocks/_responsive.scss
+++ b/scss/blocks/_responsive.scss
@@ -16,6 +16,9 @@
             .variant.right {
                 background-color: green;
             }
+            .variant.wrong {
+                background-color: #a60f0f;
+            }
         }
     }
 }
